--- a/index.html
+++ b/index.html
@@ -408,15 +408,15 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/profileportfolio1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/glovodelivery.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/profileportfolio1.png" alt="" class="img-fluid">
+                  <img src="assets/img/glovodelivery.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">JS Portfolio</h2>
+                    <h2 class="w-title">Glovo Delivery</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">13 Nov. 2018</span>
                     </div>
