--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="index.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://jithin-333.github.io/glovoResposive/"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
