--- a/index.html
+++ b/index.html
@@ -733,17 +733,17 @@
                         Ready to collaborate or have a project idea in mind? Feel free to reach out us.
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
+                        <li><span class="bi bi-geo-alt"></span> 695124 Kattakada Trivandrum</li>
                         <li><span class="bi bi-phone"></span> (+91) 628-243-1808</li>
                         <li><span class="bi bi-envelope"></span> jithinjs3333gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href="#"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
+                        <li><a href="https://www.instagram.com/ji_t_h_i_n_s/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
+                        <li><a href="#"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/jithin-s-0998ab2b5/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
